[gd_scene load_steps=8 format=2]

[ext_resource path="res://gui/heart.png" type="Texture" id=1]
[ext_resource path="res://gui/extra_heart.png" type="Texture" id=2]
[ext_resource path="res://gui/GUI.gd" type="Script" id=3]
[ext_resource path="res://gui/black_heart.png" type="Texture" id=4]
[ext_resource path="res://gui/berrybush.png" type="Texture" id=5]
[ext_resource path="res://tiles/torch.png" type="Texture" id=6]
[ext_resource path="res://gui/ItemPanel.gd" type="Script" id=7]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.187294
margin_bottom = 0.187317
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartsBlack" type="GridContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 76.0
margin_bottom = 16.0
rect_scale = Vector2( 4, 4 )
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart0" type="TextureRect" parent="HeartsBlack"]
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 4 )

[node name="Heart1" type="TextureRect" parent="HeartsBlack"]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 8.0
texture = ExtResource( 4 )

[node name="Heart2" type="TextureRect" parent="HeartsBlack"]
margin_left = 24.0
margin_right = 32.0
margin_bottom = 8.0
texture = ExtResource( 4 )

[node name="Heart3" type="TextureRect" parent="HeartsBlack"]
margin_left = 36.0
margin_right = 44.0
margin_bottom = 8.0
texture = ExtResource( 4 )

[node name="Heart4" type="TextureRect" parent="HeartsBlack"]
margin_left = 48.0
margin_right = 56.0
margin_bottom = 8.0
texture = ExtResource( 4 )

[node name="Heart5" type="TextureRect" parent="HeartsBlack"]
margin_left = 60.0
margin_right = 68.0
margin_bottom = 8.0
texture = ExtResource( 4 )

[node name="Hearts" type="GridContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
rect_scale = Vector2( 4, 4 )
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart0" type="TextureRect" parent="Hearts"]
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 1 )

[node name="Heart1" type="TextureRect" parent="Hearts"]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 8.0
texture = ExtResource( 1 )

[node name="Heart2" type="TextureRect" parent="Hearts"]
margin_left = 24.0
margin_right = 32.0
margin_bottom = 8.0
texture = ExtResource( 1 )

[node name="Heart3" type="TextureRect" parent="Hearts"]
margin_left = 36.0
margin_right = 44.0
margin_bottom = 8.0
texture = ExtResource( 1 )

[node name="Heart4" type="TextureRect" parent="Hearts"]
margin_left = 48.0
margin_right = 56.0
margin_bottom = 8.0
texture = ExtResource( 1 )

[node name="Heart5" type="TextureRect" parent="Hearts"]
margin_left = 60.0
margin_right = 68.0
margin_bottom = 8.0
texture = ExtResource( 2 )

[node name="NameLabel" type="Label" parent="."]
margin_left = 1.89201
margin_top = 583.625
margin_right = 281.892
margin_bottom = 597.625
text = "asdf"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoordLabel" type="Label" parent="."]
margin_left = 740.465
margin_top = 582.918
margin_right = 1020.46
margin_bottom = 596.918
text = "asdf"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 985.524
margin_top = 37.3677
margin_right = 993.524
margin_bottom = 536.368
color = Color( 0.560784, 0.337255, 0.231373, 1 )

[node name="PlayerPos" type="ColorRect" parent="."]
margin_left = 980.391
margin_top = 37.9611
margin_right = 999.391
margin_bottom = 54.9611
color = Color( 0.67451, 0.196078, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemPanel" type="Panel" parent="."]
margin_left = 8.0
margin_top = 48.7545
margin_right = 72.0
margin_bottom = 112.755
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ItemPanel"]
margin_left = 64.0
margin_right = 104.0
margin_bottom = 14.0
text = "C to swap"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BerryBushRect" type="TextureRect" parent="ItemPanel"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TorchRect" type="TextureRect" parent="ItemPanel"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 6 )
stretch_mode = 1

[node name="AmountLabel" type="Label" parent="ItemPanel"]
margin_left = 64.0
margin_top = 50.0
margin_right = 80.0
margin_bottom = 64.0
text = "42"
__meta__ = {
"_edit_use_anchors_": false
}
